--- a/docker/cwom/views/includes/themes/custom/cwom-templates.ejs
+++ b/docker/cwom/views/includes/themes/custom/cwom-templates.ejs
@@ -328,8 +328,7 @@
 </div>
 
 <!-- Modal -->
-<div class='modal fade' id='modal-{{:uuid}}' tabindex='-1' role='dialog' aria-labelledby='modalTitle' aria-hidden='true'
-  style='margin-left: 450px;'>
+<div class='modal fade' id='modal-{{:uuid}}' tabindex='-1' role='dialog' aria-labelledby='modalTitle' aria-hidden='true'>
   <div class='modal-dialog modal-dialog-centered' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
